--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: transparent;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url("assets/fonts/HelveticaNeue.ttf");
+}
+
+div{
+  display: flex;
+}
+
+.center-content{
+  justify-content: center;
+  align-items: center;
+}
+
+.row{
+  flex-direction: row;
+}
+
+.column{
+  flex-direction: column;
 }
